Fixed overlap contact.html

--- a/styles/contactb.css
+++ b/styles/contactb.css
@@ -26,7 +26,7 @@ body {
   padding: 20px 10%;
   display: flex;
   justify-content: space-between;
-  z-index: 100;
+  z-index: 1000;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(20px);
 }
@@ -102,7 +102,7 @@ body {
   width: 80px;
   background: black;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 1000;
   border-radius: 8px;
 }
 
@@ -118,7 +118,7 @@ body {
   font-weight: 500;
   margin: 0 auto;
   border-radius: 8px;
-  z-index: 1;
+  z-index: 1001;
   overflow: hidden;
   transition: color 0.8s;
 }
